Connect xblock to rest api

--- a/magic_number_xblock/magic_number_xblock/static/html/magic_number_xblock.html
+++ b/magic_number_xblock/magic_number_xblock/static/html/magic_number_xblock.html
@@ -1,5 +1,7 @@
 <div class="magic_number_xblock_block">
-<p>MagicNumberXBlock: count is now
-    <span class='count'>{self.count}</span> (click me to increment).
-</p>
+    <p>MagicNumberXBlock: magic number is now
+        <span class='magic-number'>{self.magic_number}</span>
+    </p>
+    <input type='text' />
+    <button>Save</button>
 </div>
