--- a/magic_number_xblock/magic_number_xblock/static/html/magic_number_xblock.html
+++ b/magic_number_xblock/magic_number_xblock/static/html/magic_number_xblock.html
@@ -1,7 +1,5 @@
 <div class="magic_number_xblock_block">
     <p>MagicNumberXBlock: magic number is now
-        <span class='magic-number'>{self.magic_number}</span>
+        <span class='magic-number'>{number}</span>
     </p>
-    <input type='text' />
-    <button>Save</button>
 </div>
